added: oop update and delete marked

--- a/styles/home.css
+++ b/styles/home.css
@@ -6,7 +6,9 @@
     color: #ffffff;
     transition: 0.5s;
 }*/
-
+#deletAllMarked{
+    display: none;
+}
 @media screen and (max-width: 576px) {
     #inputsSection > div{
         margin-top: 1vh;
